--- a/zee5/Base.lproj/Main.storyboard
+++ b/zee5/Base.lproj/Main.storyboard
@@ -53,6 +53,12 @@
                     <view key="view" contentMode="scaleToFill" id="T3t-6e-Ka2">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="qWX-Zf-qhy">
+                                <rect key="frame" x="0.0" y="320" width="414" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </datePicker>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Igl-Jw-kmw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
